css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}
:root {
  --background: #f1f5f6;
  --backgroundForm: #f7fbfc;
  --card: #ffffff;
  --text: #333536;
  --border: #d3d3d3;
}
:root img {
  filter: invert(0);
}
.dark img {
  filter: invert(1);
}
.dark {
  --background: #000000;
  --backgroundForm: #0c0f14;
  --card: #171a1f;
  --text: #e0e2e3;
  --border: #2a2e33;
}
.light {
  --background: #f1f5f6;
  --backgroundForm: #f7fbfc;
  --card: #ffffff;
  --text: #333536;
  --border: #d3d3d3;
}
body {
  background: var(--background);
  color: var(--text);
}
header {
  display: none;
}
main {
  width: 100%;
  display: flex;
  justify-content: center;
}

/* NEW NOTE */
main .container .form {
  position: fixed;
  z-index: 1;
  top: 100%;
  left: 0;
  width: 100%;
  height: 100vh;
  background: var(--background);
  transition: 0.5s cubic-bezier(1, 0, 0, 1);
  display: flex;
  align-items: center;
  margin-top: -50px;
}
main .container .form.active {
  top: 0;
}

main .container .form form {
  width: 80%;
  margin: auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: var(--backgroundForm);
  padding: 8%;
  border-radius: 20px;
}
main .container .form h2 {
  font-size: 20px;
  margin: 0 0 20px;
}
main .container .form input,
main .container .form textarea {
  width: 100%;
  margin-bottom: 10px;
  border: 1px solid var(--border);
  border-radius: 5px;
  padding: 10px;
}
main .container .form button {
  padding: 10px 30px;
  margin-top: 5px;
  border-radius: 50px;
  border: none;
  font-size: 14px;
  background: var(--text);
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
}
main .container .form form .btn-cancel {
  display: none;
  padding: 10px 30px;
  margin-top: 5px;
  border-radius: 50px;
  font-size: 14px;
  border: none;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
}
main .container .form form .btn-cancel.active {
  display: inline;
}

/* NOTES */
main .notes-title {
  width: 80%;
  margin: auto;
}
main .notes-title h2 {
  font-size: 20px;
  margin: 20px 0;
  padding-bottom: 5px;
  position: relative;
}
main .notes-title h2::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 50%;
  height: 2px;
  background: var(--text);
  border-radius: 50px 0 0 50px;
}
main .notes-title h2::after {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  width: 50%;
  height: 2px;
  background: var(--border);
  border-radius: 0 50px 50px 0;
}
/* NOTES CONTAINER */
main .container {
  width: 80%;
  margin: 35px auto 150px;
  height: 100%;
  padding-top: 10px;
  padding-bottom: 30px;
  border-radius: 20px;
  background: var(--backgroundForm);
}
main .container .notes {
  /* padding: 10px;
  background: #f3f1ec; */
  border-radius: 10px;
  width: 90%;

  margin: auto;
}
main .container .notes .cards {
  background: var(--card);
  color: var(--text);
  border-radius: 8px;
  padding: 14px;
  margin: 5px 0;
}
main .container .notes .cards:first-child {
  margin-top: 30px;
}
main .container .notes .cards:last-child {
  margin-bottom: 0;
}
main .container .notes .cards h5 {
  font-size: 15px;
}
main .container .notes .cards p {
  margin: 10px 0;
  font-size: 13px;
  line-height: 20px;
  overflow-x: scroll;
}

/* FOOTER */
footer {
  position: fixed;
  z-index: 2;
  bottom: 0;
  display: grid;
  grid-template-columns: 2fr 1fr 2fr;
  background: var(--background);
}
footer .button-footer {
  display: flex;
  justify-content: center;
  align-items: center;
}
footer .button-footer img {
  width: 13%;
  height: 100%;
  margin: auto;
  padding: 10px 0 10px;
}
footer .button-footer .plus {
  width: 70%;
  margin: auto;
  padding: 25px 0;
  border-radius: 50%;
  transform: rotate(45deg);
  transition: transform 0.5s;
}
footer .button-footer .plus.active {
  transform: rotate(360deg);
}
footer .button-footer:nth-child(2) {
  position: relative;
  margin-top: -30px;
}
footer .button-footer:nth-child(2)::before {
  content: "";
  position: absolute;
  z-index: -1;
  width: 76px;
  height: 76px;
  background: var(--background);
  border-radius: 50%;
}
footer .button-footer:nth-child(3) img {
  transform: rotate(20deg);
}
:root footer .button-footer:nth-child(3) img {
  /*transform: scale(1);
  transition: transform 0.25s;*/
}
.dark footer .button-footer:nth-child(3) img {
  /*transform: scale(0);*/
  filter: invert(0);
}
@media (prefers-color-scheme: dark) {
  :root {
    --background: #000000;
    --backgroundForm: #0c0f14;
    --card: #171a1f;
    --text: #e0e2e3;
    --border: #2a2e33;
  }
  .dark {
    --background: #f1f5f6;
    --backgroundForm: #f7fbfc;
    --card: #ffffff;
    --text: #333536;
    --border: #d3d3d3;
  }
  .dark img {
    filter: invert(0);
  }
  :root img {
    filter: invert(1);
  }
}
@media only screen and (max-width: 320px) {
}

